[metadata]
name = strie
version = attr: strie.__version__
keywords = trie, string
description = Storage string trie.
author = Mingzhe Zou
author_email = zoumingzhe@outlook.com
url = https://github.com/bondbox/strie
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_files = LICENSE
platforms = any
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 3
project_urls =
    Source Code = https://github.com/bondbox/strie
    Bug Tracker = https://github.com/bondbox/strie/issues
    Documentation = https://github.com/bondbox/strie

[options]
zip_safe = True
include_package_data = True,
python_requires = >=3.8
install_requires =
    xarg-python >= 0.10
    cachetools
packages = find:

[options.entry_points]
console_scripts =
    strie = strie.cmds:main
    strie-init = strie.cmds.init:main
    strie-list = strie.cmds.list:main
    strie-set = strie.cmds.set:main
    strie-get = strie.cmds.get:main
    strie-del = strie.cmds.pop:main

[options.packages.find]
include = strie*
exclude =
    test
