; view at https://setuptools.pypa.io/en/stable/userguide/declarative_config.html#metadata
[metadata]
keywords = trie, string
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_files = LICENSE
platforms = any
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 3

; view at https://setuptools.pypa.io/en/stable/userguide/declarative_config.html#options
[options]
zip_safe = True
include_package_data = True
python_requires = >=3.8
install_requires =
    xarg-python >= 1.2.1
    cachetools

[options.entry_points]
console_scripts =
    strie = strie.cmds:main
